-------------------------------------

  Updates to the Italian translaton from Meo Bogliolo.

  Refactoring of statistics package API. This may affect existing
  custom plugins. See PluginProcessContext.getStatistics.

  New Russion translation from Konstantin Ignatyev.

  Fix the TCPProxy port forwarding mode to correctly generate https
  URLs (bug 1324640).

  Fix the exception logging to include Jython stack traces.

  Java methods can now be wrapped. The resulting object should be
  invoked Python style, i.e. non-static methods must be supplied with
  a 'self' instance as the first argument.

  New grinder.debug.singleprocess property. If set to true, the agent
  process spawns engines in threads rather than processes, using
  special classloaders to isolate the engines. This allows the engine
  to be easily run in a debugger. This is primarily a tool for
  debugging The Grinder engine, but it might also be useful to
  advanced users.


Grinder 3.0-beta27
------------------

  The TCPProxy is now relaxed about empty query strings. Thanks to
  John Sinclair for the suggestion.

  Updates to the Spanish translation from Jose Antonio Zapata.

  New Polish translation from KArol Muszynski.

  New Italian translation from Meo Bogliolo.

  The documentation sources are now hosted on SourceForge CVS, and are
  no longer part of the source distribution. See
  http://sourceforge.net/cvs/?group_id=18598.

  Modify HTTPClient code so that HTTPResponse.getText() works with
  more content types. (Bug 1297821).

  Fix out of date documentation references to getIndexForLong (it has
  been renamed to getLongIndex). Thanks to Dietrich Bollmann for the
  report.


Grinder 3.0-beta26
------------------

  The Grinder now requires J2SE 1.4.

  The console now displays agent process status.

  Fix the TCPProxy to cope correctly with 8 bit strings in all
  locales (Bug 1167731). Thanks to Anton Malykh for the report.
